Upload v0.0.7
Criação de Dockerfile, docke-composer, padronização de validação e retorno;
